Corrections implemented from last meeting!

--- a/src/app/shared/components/contact-section/contact-section.component.html
+++ b/src/app/shared/components/contact-section/contact-section.component.html
@@ -1,118 +1,140 @@
 <section id="contact" class="contact">
-    <div class="container">
+  <div class="container">
 
-      <div class="section-title" data-aos="fade-up">
-        <h2>We would love to hear from you</h2>
-        <p>Contact Us</p>
-      </div>
+    <div class="section-title" data-aos="fade-up">
+      <h2>We would love to hear from you</h2>
+      <p>Contact Us</p>
+    </div>
 
-      <div class="row">
+    <div class="row">
 
-        <div class="col-lg-4" data-aos="fade-right" data-aos-delay="100">
-          <div class="info">
-            <div class="address">
-              <i class="icofont-google-map"></i>
-              <!-- <h4>Location:</h4> -->
-              <p>No. 5 ladipo Tejumola Street, New Bodija, Ibadan, Oyo State, Nigeria. </p>
-            </div>
+      <div class="col-lg-4" data-aos="fade-right" data-aos-delay="100">
+        <div class="info">
+          <div class="address">
+            <i class="icofont-google-map"></i>
+            <!-- <h4>Location:</h4> -->
+            <p>No. 5 ladipo Tejumola Street, New Bodija, Ibadan, Oyo State, Nigeria. </p>
+          </div>
 
-            <div class="email">
-              <i class="icofont-envelope"></i>
-              <!-- <h4>Email:</h4> -->
-              <p> jcmoutreach2017@gmail.com</p>
-              <p></p>
-            </div>
+          <div class="email">
+            <i class="icofont-envelope"></i>
+            <!-- <h4>Email:</h4> -->
+            <p> jcmoutreach2017@gmail.com</p>
+            <p></p>
+          </div>
 
-            <div class="phone">
-              <i class="icofont-phone"></i>
-              <!-- <h4>Call:</h4> -->
-              <p>+234 8033 843762</p>
-              <p>+234 8074286452</p>
-              <p>+234 8034298538</p>
-            </div>
-
+          <div class="phone">
+            <i class="icofont-phone"></i>
+            <!-- <h4>Call:</h4> -->
+            <p>+234 8033 843762</p>
+            <p>+234 8074286452</p>
+            <p>+234 8034298538</p>
           </div>
 
         </div>
 
-        <div class="col-lg-8 mt-5 mt-lg-0 kwes-form" data-aos="fade-left" data-aos-delay="200">
+      </div>
 
-          <form [formGroup]="myForm">
-            <!-- <div class="row mb-2 text-center"  *ngIf="showMsg">
-              <div class="col-xs-12">
-                <p class="alert alert-success">
-                    <strong>Thanks for reaching out! We would get back to you shortly.</strong>
-                </p>
-              </div>
-            </div> -->
-            <div class="form-row">
-              <div class="col-md-6 form-group">
-                <input class="form-control"
-                       id="nameId"
-                       type="text"
-                       placeholder="Name"
-                       required
-                       formControlName="name"
-                />
-                <div *ngIf="name.invalid && (name.dirty || name.touched)">
-                  <p style="font-size: 12px; color: red;">Please provide a name.</p>
+      <div class="col-lg-8 mt-5 mt-lg-0 kwes-form" data-aos="fade-left" data-aos-delay="200">
+
+        <div class="container">
+          <div class="row custom-wrapper">
+            <div class="col-md-12">
+
+              <!-- Form starts -->
+              <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+                <div *ngIf="alert" class="alert alert-success alert-dismissible fade show" role="alert">
+                  <strong>Message sent!</strong> Thanks for reaching out! We would get back to you shortly.
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
-              
-               
-              </div>
+                
+                <div class="form-row">
+                  <div class="col-md-6 form-group">
+                    <input type="text" class="form-control" formControlName="name" placeholder="Name"
+                      [ngClass]="{'error': submitted && myForm.name.errors}">
+                    <!-- error block -->
+                    <div class="invalid-feedback" *ngIf="submitted && myForm.name.errors?.required">
+                      <sup>*</sup>Enter your name
+                    </div>
+                    <div class="invalid-feedback" *ngIf="submitted && myForm.name.errors?.minlength">
+                      <sup>*</sup>Name must be 2 characters long
+                    </div>
+                    <div class="invalid-feedback" *ngIf="submitted && myForm.name.errors?.pattern">
+                      <sup>*</sup>No special charcter allowed
+                    </div>
+                  </div>
 
-              <div class="col-md-6 form-group">
-                <input class="form-control"
-                       id="emailId"
-                       type="text"
-                       placeholder="Email"
-                       required
-                       formControlName="email"
-                       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
-                />
-                <div *ngIf="email.invalid && (email.dirty || email.touched)">
-                  <p style="font-size: 12px; color: red;">Please provide a valid email address.</p>
+                  <!-- Email -->
+                  <div class="col-md-6 form-group">
+                    <input type="email" placeholder="Email" class="form-control" formControlName="email"
+                      [ngClass]="{'error': submitted && myForm.email.errors}">
+                    <!-- error block -->
+                    <div class="invalid-feedback" *ngIf="submitted && myForm.email.errors?.required">
+                      <sup>*</sup>Please enter your email
+                    </div>
+                    <div class="invalid-feedback" *ngIf="submitted && myForm.email.errors?.pattern">
+                      <sup>*</sup>Please enter valid email
+                    </div>
+                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <input class="form-control"
-              id="subjectId"
-              type="text"
-              placeholder="Subject"
-              required
-              formControlName="subject"
-             />
-             <div *ngIf="subject.invalid && (subject.dirty || subject.touched)">
-              <p style="font-size: 12px; color: red;">Please provide a subject.</p>
-            </div>
-            </div>
-            <div class="form-group">
-              <textarea class="form-control"
-              id="messageId"
-              rows="5"
-              type="text"
-              placeholder="Message"
-              required
-              formControlName="message"
-              ></textarea>
 
-              <div *ngIf="message.invalid && (message.dirty || message.touched)">
-                <p style="font-size: 12px; color: red;">Messages must be at least 15 characters long.</p> 
+                <!-- Phone number -->
+                <div class="form-group">
+                  <input type="text" placeholder="Phone Number" class="form-control" formControlName="phoneNumber"
+                    [ngClass]="{'error': submitted && myForm.phoneNumber.errors}">
+
+                  <!-- error block -->
+                  <div class="invalid-feedback" *ngIf="submitted && myForm.phoneNumber.errors?.maxLength">
+                    <sup>*</sup>Phone number must be 10 digit long
+                  </div>
+                  <div class="invalid-feedback" *ngIf="submitted && myForm.phoneNumber.errors?.required">
+                    <sup>*</sup>Please enter your phone number
+                  </div>
+                  <div class="invalid-feedback" *ngIf="submitted && myForm.phoneNumber.errors?.pattern">
+                    <sup>*</sup>Please enter valid phone number
+                  </div>
+                </div>
+
+                <!-- Subject -->
+                <div class="form-group">
+                  <input type="text" placeholder="Subject" class="form-control" formControlName="subject"
+                    [ngClass]="{'error': submitted && myForm.subject.errors}">
+
+                  <!-- error block -->
+                  <div class="invalid-feedback" *ngIf="submitted && myForm.subject.errors?.required">
+                    <sup>*</sup>Please enter your subject
+                  </div>
+                </div>
+
+                <!-- Message -->
+                <div class="form-group">
+                  <textarea rows="5" type="text" type="text" class="form-control" placeholder="Message"
+                    formControlName="message" [ngClass]="{'error': submitted && myForm.message.errors}"></textarea>
+
+                  <!-- error block -->
+                  <div class="invalid-feedback" *ngIf="submitted && myForm.message.errors?.required">
+                    <sup>*</sup>Please enter your message
+                  </div>
+                </div>
+                <div class="card mt-3">
+                  <div class="card-body">
+                      <div #recaptcha ></div>
+                  </div>
               </div>
+
+
+
+                <div class="text-center mt-2"><input type="submit" value="Send Message"></div>
+
+              </form>
+
             </div>
-            <div class="card mt-3">
-              <div class="card-body">
-                  <div #recaptcha ></div>
-              </div>
           </div>
-            <div class="text-center mt-2"><input type = "submit" (ngClick)="sendMessage()" [disabled]="myForm.invalid" value = "Send Message"></div>
-          </form>
-          
-
         </div>
 
       </div>
 
     </div>
-  </section>
+
+  </div>
+</section>
